--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^8.18.0",
+    "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.24.0",
     "lucide-react": "^0.554.0",
     "next": "14.2.33",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20",
